--- a/vercel.json
+++ b/vercel.json
@@ -6,24 +6,24 @@
             "dest": "/api/$1"
         },
         {
-            "src": "/(.*\\.css|.*\\.js|.*\\.png|.*\\.jpg|.*\\.jpeg|.*\\.gif|.*\\.svg|.*\\.ico)",
+            "src": "/(.*\\.css|.*\\.js|.*\\.png|.*\\.jpg|.*\\.jpeg|.*\\.gif|.*\\.svg|.*\\.ico|.*\\.webp|.*\\.xml|.*\\.txt)",
             "dest": "/public/$1",
             "headers": {
-                "Cache-Control": "public, max-age=0, must-revalidate"
+                "Cache-Control": "public, max-age=31536000, immutable"
             }
         },
         {
             "src": "/",
             "dest": "/public/index.html",
             "headers": {
-                "Cache-Control": "no-cache, no-store, must-revalidate"
+                "Cache-Control": "public, max-age=0, must-revalidate"
             }
         },
         {
             "src": "/(.*)",
             "dest": "/public/index.html",
             "headers": {
-                "Cache-Control": "no-cache, no-store, must-revalidate"
+                "Cache-Control": "public, max-age=0, must-revalidate"
             }
         }
     ],
