--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "qs": "^6.11.2",
     "sqlite3": "^5.1.7",
-    "yt-search": "^2.11.0",
-    "youtube-dl-exec": "^3.0.0"
+    "youtube-dl-exec": "^3.1.1",
+    "yt-search": "^2.11.0"
   }
 }
